syntax = "proto3";

package kv;

service Kv {
  rpc Put (PutRequest) returns (PutReply);
  rpc Get (GetRequest) returns (GetReply);
}

message PutRequest  { string key = 1; bytes value = 2; }
message PutReply    {}

message GetRequest  { string key = 1; }
message GetReply    { bytes value = 1; bool found = 2; }